# AI-Dive

./: README.md  arc_easy_test.jsonl  gsm8ktest.jsonl  pyproject.toml  requirements.txt  test.ipynb  winograndetest.jsonl
ai/dive/: dataset.py  diver.py  file_classification.py  model.py  saver.py  trainer.py  vit.py
ai/dive/cleaners/: cleaner.py  qa_cleaner.py
ai/dive/data/: arc_dataset.py  dataset.py  directory_classification.py  file_classification.py  gsm8k_dataset.py  hellaswag_dataset.py  image_file_classification.py  instruct_squad_dataset.py  label_reader.py  latex_dataset.py  mmlu_dataset.py  prompt_repeater.py  prompt_response_dataset.py  prompt_template_filler.py  squad_dataset.py  togetheraipromptrepeater.py  winogrande_dataset.py
ai/dive/data/sft/: pr_sft_dataset.py  qa_sft_dataset.py
ai/dive/models/: anthropic.py  bitnet_llm.py  bitnet_olmo.py  clip.py  gpt4.py  image_classification.py  model.py  resnet50.py  togetherai.py  transformer_llm.py  unify.py  vit.py
ai/dive/models/bitnet/: bitnet.py
ai/dive/prompts/: assistant_prompt.py  qa_prompt.py
ai/dive/trainers/: bitnet_trainer.py  trainer.py
tools/: clean_generated_qs.py  gen_qa_instructions.py  prompt_bitnet.py  run.py  run_arc_easy.py  run_camera.py  run_clip.py  run_generate_qs.py  run_gpt4_joke_completion.py  run_gpt4_joke_setup.py  run_gsm8k.py  run_hellaswag.py  run_instruct_squad.py  run_mistral.py  run_mmlu.py  run_squad.py  run_togetherai.py  run_winogrande.py  test.py  train_bitnet.py  train_vit.py
